# hadasim

./: .gitignore  README.md  auth.py  database.py  docker-compose.yml  main.py  models.py  pyproject.toml  schemas.py  seed.py
frontend/: app.js  dashboard.html  index.html  register.html  style.css
